--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 30px;
     letter-spacing: 1.5px;
-    margin: 0 auto;
+    color: #777777;
     
 }
 
@@ -48,12 +48,12 @@ body {
     margin-left: 5px;
     text-decoration: none;
     color: #cccccc;
-    transition: 0.5s
+    transition: 1s;
 }
 
 .nav-links a:hover {
     color: #4aaaa5;
-    text-decoration: underline
+    text-decoration: underline;
 }
 
 ul {
@@ -100,6 +100,59 @@ img {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    background-color: gray;
+    background-color: #666666;
+    color: white;
     border-top: 6px solid turquoise;
+}
+
+/* CONTACT STYLES */
+
+.contact-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 25px 0;
+    
+}
+
+.contact-container {
+    width: 960px;
+    border: #dddddd 1px solid;
+    padding: 20px;
+}
+
+
+.form-heading {
+    font-size: 0.9em;
+    padding: 5px;
+}
+
+input {
+    width: 99%;
+    height: 25px;
+    border: #dddddd 1px solid;
+    padding: 5px;
+}
+
+#message-box {
+    height: 200px;
+    width: 100%;
+    border: #dddddd 1px solid;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+}
+
+button {
+    padding: 5px 20px;
+    color: #ffffff;
+    background-color: #4aaaa5;
+    border: none;
+    font-size: 1.2em;
+    outline: none;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+button:hover {
+    box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
 }
