--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,9 @@ body {
     
 }
 
+hr {
+    border-top: 1px solid #dddddd;
+}
 /* NAV STYLES */
 
 .navbar {
@@ -27,7 +30,7 @@ body {
 }
 
 .nav-title {
-    
+    width: 250px;
     color: white;
     background-color: #4aaaa5;
     padding: 25px;
@@ -155,4 +158,27 @@ button {
 
 button:hover {
     box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
+}
+
+/* PORTFOLIO STYLES */
+
+.portfolio-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.portfolio-container {
+    width: 960px;
+}
+
+.portfolio-images {
+    
+    
+}
+
+.image {
+    background-color: #4aaaa5;
+    height: 150px;
+    width: 150px;
 }
