--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,26 +7,24 @@ body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 30px;
     letter-spacing: 1.5px;
-    color: #777777;
-    
+    color: #777777;    
 }
 
 .heading {
     font-family: 'Georgia', 'Times', 'Times New Roman', serif;
-    color: #4aaaa5;
-    
+    color: #4aaaa5;   
 }
 
 hr {
     border-top: 1px solid #dddddd;
 }
+
 /* NAV STYLES */
 
 .navbar {
     display: flex;
     justify-content: center;
-    border-bottom: #cccccc solid 1px;
-    
+    border-bottom: #cccccc solid 1px;  
 }
 
 .nav-title {
@@ -43,8 +41,7 @@ hr {
 
 .nav-links  {
     margin-left: 500px;
-    margin-top: 30px;
-    
+    margin-top: 30px;  
 }
 
 .nav-links a {
@@ -68,6 +65,7 @@ ul {
 .about-wrapper {
     display: flex;
     justify-content: center;
+    margin-bottom: 3px;
 }
 
 .about-container {
@@ -75,7 +73,6 @@ ul {
     width: 960px;
     display: flex;
     padding: 10px;
-
 }
 
 .title-section h3 {
@@ -87,25 +84,11 @@ p {
     margin: 10px;
 }
 
-
-
 .about-image {
     height: 200px;
     width: auto;
     float: left;
     margin: 20px 30px 15px 5px;
-}
-
-/* FOOTER STYLES */
-
-.footer-wrapper {
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    background-color: #666666;
-    color: white;
-    border-top: 6px solid turquoise;
 }
 
 /* CONTACT STYLES */
@@ -115,13 +98,13 @@ p {
     justify-content: center;
     align-items: center;
     margin: 25px 0;
-    
 }
 
 .contact-container {
     width: 960px;
     border: #dddddd 1px solid;
     padding: 20px;
+    margin-bottom: 212px;
 }
 
 
@@ -166,10 +149,12 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 2px;
 }
 
 .portfolio-container {
     width: 960px;
+    height: 83.8vh;
 }
 .portfolio-container h3 {
     padding: 20px;
@@ -179,17 +164,7 @@ button:hover {
 .portfolio-images {
    display: flex;
    flex-wrap: wrap;
-   width: 600px;
-   
-    
-    
-}
-
-.image img {
-    background-color: #4aaaa5;
-    height: 175px;;
-    width: 225px;;
-    margin: 20px;
+   width: 600px;   
 }
 
 .image  {
@@ -198,28 +173,54 @@ button:hover {
     margin: 20px;
 }
 
-#image-4 {
-    background: url('../images/IMG_20180614_173326.jpg')  ;
+#image-1 {
+    background: url('..//images/pexels-photo-1804796.jpeg');
     background-size: 100% 100%;
-       
+}
 
+#image-2 {
+    background: url('../images/pexels-photo-2414043.jpeg');
+    background-size: 100% 100%;
+}
+
+#image-3 {
+    background: url('../images/pexels-photo-2440013.jpeg');
+    background-size: 100% 100%;
+}
+
+#image-4 {
+    background: url('../images/IMG_20180614_173326.jpg');
+    background-size: 100% 100%;
 }
 
 
 #image-5 {
-    background: url('../images/pexels-photo-2480684.jpeg')  ;
+    background: url('../images/pexels-photo-2480684.jpeg');
     background-size: cover;    
-
 }
 
 #image-6 {
-    background: url('../images/IMG_20180428_075402-EFFECTS.jpg');  
-    background-size: 100% 100%;
-    
+    background: url('../images/IMG_20180428_075402-EFFECTS.jpg');
+    background-size: 100% 100%;   
 }
 
 .photo-label {
     background-color: #4aaaa5;
-    color: #ffffff;
+    color: #ffffff;  
+    margin-top: 67%;  
+    height: 20%;
+    text-align: center;
+}
+
+/* FOOTER STYLES */
+
+.footer-wrapper {
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-color: #666666;
+    color: white;
+    border-top: 6px solid turquoise;
     
 }
