--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     line-height: 30px;
     letter-spacing: 1.5px;
     color: #777777;    
-    background: url('../images/steve-johnson-YS0YJLU_h2k-unsplash.jpg');
+    background: url('../images/jj-ying-7JX0-bfiuxQ-unsplash.jpg');
     background-size: 100% 100%;
 }
 
@@ -82,6 +82,7 @@ ul {
 .title-section h3 {
     padding: 20px;
     font-size: 1.5em;
+    
 }
 
 p {
@@ -93,6 +94,7 @@ p {
     width: auto;
     float: left;
     margin: 20px 30px 15px 5px;
+    box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
 }
 
 /* CONTACT STYLES */
@@ -110,6 +112,7 @@ p {
     padding: 20px;
     margin-bottom: 212px;
     background-color: #fff;
+    box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
 }
 
 
@@ -161,6 +164,7 @@ button:hover {
     width: 960px;
     background-color: #fff;
     margin: 20px 0;
+    box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
 }
 .portfolio-container h3 {
     padding: 20px;
@@ -177,6 +181,7 @@ button:hover {
     height: 175px;;
     width: 200px;;
     margin: 20px;
+    box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
 }
 
 #image-1 {
