--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ ul {
     padding: 10px;
     background-color: #fff;
     margin: 20px 0;
+    box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
 }
 
 .title-section h3 {
@@ -227,11 +228,15 @@ button:hover {
 
 .footer-wrapper {
     height: 60px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: flex-end;
     background-color: #666666;
     color: white;
-    border-top: 6px solid turquoise;
+    border-top: 6px solid #4aaaa5;
+    position: absolute;;
+    bottom: 0;
+
     
 }
