--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,7 @@ body {
     color: #4aaaa5;   
 }
 
-hr {
-    border-top: 1px solid #dddddd;
-}
+
 
 /* NAV STYLES */
 
@@ -54,6 +52,15 @@ hr {
     transition: 1s;
 }
 
+.pipe {
+    border-right: 1px solid #f5f0f0;
+    padding: 0 1em;
+}
+
+.no-pipe {
+    padding: 0 1em;
+}
+
 .nav-links a:hover {
     color: #4aaaa5;
     text-decoration: underline;
@@ -80,6 +87,11 @@ ul {
     box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
 }
 
+.about-hr {
+    border-top: 3px solid #dddddd;
+    width: 96%;
+    margin: 0 auto;
+}
 .title-section h3 {
     padding: 20px;
     font-size: 1.5em;
@@ -116,6 +128,10 @@ p {
     box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
 }
 
+.contact-hr {
+    border-top: 3px solid #dddddd;
+    margin: 0 auto;
+}
 
 .form-heading {
     font-size: 0.9em;
@@ -157,8 +173,7 @@ button:hover {
 .portfolio-wrapper {
     display: flex;
     justify-content: center;
-    align-items: center;
-    
+    align-items: center;  
 }
 
 .portfolio-container {
@@ -166,6 +181,12 @@ button:hover {
     background-color: #fff;
     margin: 20px 0;
     box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
+}
+
+.portfolio-hr {
+    border-top: 3px solid #dddddd;
+    width: 95%;
+    margin: 0 auto;
 }
 .portfolio-container h3 {
     padding: 20px;
