--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,8 @@ button {
 }
 
 button:hover {
-    box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 3px  -0.5px rgba(0,0,0,0.75);
+    /* box-shadow: none; */
 }
 
 /* PORTFOLIO STYLES */
