--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,7 @@ input {
     width: 99%;
     height: 25px;
     border: #dddddd 1px solid;
+    color: #4aaaa5;
     padding: 5px;
     outline-color: #4aaaa5;
     transition: .5s;
@@ -154,9 +155,9 @@ input:hover {
 #message-box {
     height: 200px;
     width: 100%;
+    color: #4aaaa5;
     border: #dddddd 1px solid;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #777777;
     outline-color: #4aaaa5;
     transition: 0.5s;
 }
@@ -171,6 +172,7 @@ button {
     color: #ffffff;
     background-color: #4aaaa5;
     border: none;
+    border-radius: 4px;
     font-size: 1.2em;
     outline: none;
     cursor: pointer;
