--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .navbar-container {
-    width: 76.5vw;
+    width: 977px;
 }
 
 .nav-title {
@@ -38,9 +38,6 @@ body {
     padding: 25px;
     font-size: .8em;
     float: left;
-    display: flex;
-    justify-content: center;
-    align-items: center; 
 }
 
 #title {
@@ -51,12 +48,13 @@ body {
 .link-wrapper {
     float: right;
     display: flex;
+    align-items: center;
+    height: 80px;
+     
 }
 
 .nav-links  {
-    margin-top: 25px;  
-    justify-content: center;
-    align-items: center;
+   
     
 }
 
@@ -81,9 +79,6 @@ body {
     text-decoration: underline;
 }
 
-ul {
-    align-content: flex-end;
-}
 
 
 
