--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,27 @@
     padding: 0;
 }
 
+html {
+    height: 100%;
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 30px;
     letter-spacing: 1.5px;
     color: #777777;    
-    background: url('../images/jj-ying-7JX0-bfiuxQ-unsplash.jpg') no-repeat;
+    background: url('../images/jj-ying-7JX0-bfiuxQ-unsplash.jpg') ;
     background-size: 100% 100%;
+    min-height: 100%;
+    position: relative;
+    padding-bottom: 6rem;
 }
 
 .heading {
@@ -29,7 +43,7 @@ body {
 }
 
 .navbar-container {
-    width: 977px;
+    width: 960px;
 }
 
 .nav-title {
@@ -86,7 +100,7 @@ body {
 .about-container {
     width: 960px;
     display: flex;
-    padding: 10px;
+    padding: 10px 0;
     background-color: #fff;
     margin: 20px 0;
     box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
@@ -269,16 +283,18 @@ button:hover {
 /* FOOTER STYLES */
 
 .footer-wrapper {
-    height: 60px;
+    position: absolute;
+    bottom: 0;
     width: 100%;
+    
+}
+
+.footer-container {
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
+    height: 60px;
     background-color: #666666;
     color: white;
     border-top: 6px solid #4aaaa5;
-    position: relative;
-    bottom: 0;
-
-    
 }
