--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,17 +11,18 @@ html {
 
 
 body {
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
     line-height: 30px;
     letter-spacing: 1.5px;
-    color: #777777;    
-    background: url('../images/jj-ying-7JX0-bfiuxQ-unsplash.jpg') ;
-    background-size: 100% 100%;
+    color: #777777;
+    background-image: url("../images/jj-ying-7JX0-bfiuxQ-unsplash.jpg");
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
     min-height: 100%;
     display: flex;
     flex-direction: column;
-    
-}
+  }
 
 .heading {
     font-family: 'Georgia', 'Times', 'Times New Roman', serif;
